[tool.poetry]
name = "personalwebsite"
version = "0.1.0"
description = ""
authors = ["Dima Chikunda <DChikunda@EvolvTechnology.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
